--- a/linkedlist/single-linked-list/assets/css/style.css
+++ b/linkedlist/single-linked-list/assets/css/style.css
@@ -130,7 +130,7 @@ header h3 {
 }
 
 header h4 {
-    font: normal normal 600 18px/28px Oswald;
+    font: 25px Oswald;
     letter-spacing: 0.36px;
     color: #191919;
     text-transform: uppercase;
